fix(right sidebar): gap

--- a/src/nestingRightSidebar.css
+++ b/src/nestingRightSidebar.css
@@ -87,7 +87,9 @@ div#root {
                 max-height: fit-content;
                 overflow-y: visible;
                 padding-bottom: 3em;
-                background: var(--ls-primary-background-color)
+                background: var(--ls-primary-background-color);
+                padding: 0.3em;
+                margin-top: 1em;
             }
 
             &.content>div>div:first-of-type {
